Update overflow-y to display modules menu correctly from smartphone

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -350,7 +350,7 @@ body > .mCSB_inside > .mCSB_container{
 @media (max-width: 1200px) {
     .app-menu{
         max-height: 100%;
-        overflow-y: auto;
+        overflow-y: visible;
     }
 }
 
@@ -8666,4 +8666,3 @@ body .fc {
         padding: 30px;
     }
 }
-
